# Allium

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  about.md  changelog.md  mod.json  support.md
.github/workflows/: docker-build.yml  multi-platform.yml
include/Allium/data/: Geometry.hpp
include/Allium/manager/: BrushManager.hpp
include/Allium/ui/: AlliumButtonBar.hpp  AlliumPopup.hpp  MenuItemTogglerExtra.hpp  SupportPopup.hpp
include/Allium/util/: BrushDrawer.hpp  CurveBrushDrawer.hpp  DrawNodeExtension.hpp  EditorUtilities.hpp  FreeBrushDrawer.hpp  LineBrushDrawer.hpp  PolygonBrushDrawer.hpp  PolylineConverter.hpp  TextBrushDrawer.hpp
include/Allium/util/converter/: BaseConverter.hpp  ParallelogratorConverter.hpp  PolylineConverter.hpp  TriangulatorConverter.hpp
src/data/: Geometry.cpp
src/hooks/: EditorUI.cpp
src/manager/: BrushManager.cpp
src/ui/: AlliumButtonBar.cpp  AlliumPopup.cpp  MenuItemTogglerExtra.cpp  SupportPopup.cpp
src/util/: BrushDrawer.cpp  CurveBrushDrawer.cpp  CurveOptimizer.hpp  DrawNodeExtension.cpp  EditorUtilities.cpp  FreeBrushDrawer.cpp  LineBrushDrawer.cpp  PolygonBrushDrawer.cpp  PolylineConverter.cpp  TextBrushDrawer.cpp
src/util/converter/: BaseConverter.cpp  ParallelogratorConverter.cpp  PolylineConverter.cpp  TriangulatorConverter.cpp
